Spelling and grammar corrections for core_skills

--- a/sections/character_creation/core_skills.tex
+++ b/sections/character_creation/core_skills.tex
@@ -1,6 +1,6 @@
 Where attributes showcase the raw physical and mental capabilities of a character, skills represent their learned or unlearned abilities.
 
-In \textbf{Fast Play} games, player characters will be given \textbf{12 skill points} they may assign to their character during character creation. Players may gain additional points to spend in this phase by either accepting a Disabling Characteristic (See: “Disabling Characteristics”) or by assigning attribute points to Intelligence (+3 skill points per point in Intelligence.) In \textbf{Campaign Play}, players will also be able to gain skill points as the story progresses. Each point represents an additional die the character receives when making dice checks using the applicable skill.
+In \textbf{Fast Play} games, player characters will be given \textbf{12 skill points} they may assign to their character during character creation. Players may gain additional points to spend in this phase by either accepting a \textbf{Disabling Characteristic} (see \textbf{Disabling Characteristics}, \autoref{ch:cc_disabling_characteristics}) or by assigning attribute points to \textbf{Intelligence} (+3 skill points per point in \textbf{Intelligence}). In \textbf{Campaign Play}, players will also be able to gain skill points as the story progresses. Each point represents an additional die the character receives when making dice checks using the applicable skill.
 
 \begin{figure}[H]
     \includegraphics[width=8cm]{images/placeholder}
@@ -8,13 +8,17 @@ In \textbf{Fast Play} games, player characters will be given \textbf{12 skill po
     \caption{Image Placeholder.}
 \end{figure}
 
-Just like with Attributes, when assigning a point simply mark the box with your pencil as shown above. The tapered box on the far left is there to “cross out” if you take a negative in a skill. These skills can have a max of four points spent on each of them, and a player may also take a single ‘negative’ point from one of these skills, and apply the removed point elsewhere. (Note: This may only be done once, you cannot choose multiple negative skills at character creation).
+Just like with attributes, when assigning a point simply mark the box with your pencil as shown above. The tapered box on the far left is there to “cross out” if you take a negative in a skill. These skills can have a max of four points spent on each of them, and a player may also take a single `negative' point from one of these skills, and apply the removed point elsewhere. 
 
-Although this tapered “negative” box is also present in the Attributes section, players may not choose to have a negative in an attribute – it is only there in case a disabling characteristic demands a negative be applied to an attribute.
+\begin{displayquote}
+    Note: This may only be done once, you cannot choose multiple negative skills at character creation.
+\end{displayquote}
 
-Every \textbf{skill} has an attribute (or attributes) it is based on. For example, the skill \textbf{“Persuasion”} is based on the Attribute \textbf{“Intelligence”} When rolling a skill check you need to create the pool of dice that you will be rolling for the check. First, add the 3 dice that make up your base roll. Then, count the number of shaded boxes in the skill you are being asked to make a check for, as well as the number of shaded boxes in that skill’s core attribute. This forms your dice pool for any skill check and will be explained in depth in Chapter 2: \textbf{How to Play}.
+Although this tapered `negative' box is also present in the Attributes section, players may not choose to have a negative in an attribute - it is only there in case a \textbf{Disabling Characteristic} demands a negative be applied to an attribute.
 
-For Example, your character has \textbf{1 point} in \textbf{Strength} and \textbf{3 points} in \textbf{Athletics} When they perform an athletics check they will begin with their base of\textbf{3D6} add \textbf{1D6} for their \textbf{STR} Attribute, and \textbf{3D6} for their Athletics skill. The result is \textbf{7D6} to roll with:
+Every skill has an attribute (or attributes) it is based on. For example, the skill \textbf{Persuasion} is based on the attribute \textbf{Intelligence}. When rolling a skill check, you need to create the pool of dice (see \autoref{sec:dice_pools}) that you will be rolling for the check. First, add the 3 dice that make up your base roll. Then, count the number of shaded boxes in the skill you are being asked to make a check for, as well as the number of shaded boxes in that skill's core attribute. This forms your dice pool for any skill check and will be explained in depth in \textbf{How to Play}, \autoref{part:how_to_play}.
+
+For example, your character has \textbf{1 point} in \textbf{Strength} and \textbf{3 points} in \textbf{Athletics} When they perform an athletics check, they will begin with their base of \textbf{3D6}, add \textbf{1D6} for their \textbf{STR} Attribute, and \textbf{3D6} for their Athletics skill. The result is \textbf{7D6} to roll with:
 
 \begin{figure}[H]
     \includegraphics[width=8cm]{images/placeholder}
@@ -28,22 +32,22 @@ Skills are divided into two categories:
 
 \begin{itemize}
     \item \textbf{Core Skills:} Strength/Reflex/Intelligence-based skills.
-    \item \textbf{Vocational Skills:} Skills which define a character’s chosen path in life, be it a class, a career or a calling. These skills are crafted between the player and narrator and include combat proficiencies.
+    \item \textbf{Vocational Skills:} Skills which define a character's chosen path in life, be it a class, a career or a calling. These skills are crafted between the player and narrator and include combat proficiencies.
 \end{itemize}
 
 \section{Core Skills in Detail} \label{sec:core_skills_in_detail}
 
-Core skills in Cogent Roleplay are meant to represent the scope of activities that everyday people are capable of attempting with some chance of success. It includes motions of the body and feats of strength, speed and thought that are near-universally used by all creatures. While sometimes more specific interpretations of these skills are relevant (For example, using ride/pilot to drive a car), the same skill could also be used for a beaver attempting to balance on a log as it floated downstream.
+\textbf{Core Skills} in Cogent Roleplay are meant to represent the scope of activities that everyday people are capable of attempting with some chance of success. It includes motions of the body and feats of strength, speed and thought that are near-universally used by all creatures. General interpretations of these skills can be relevant, for examples, while \textbf{Ride/Pilot} could be used to drive a car, the same skill could also be used by a beaver attempting to balance on a log floating downstream.
 
-It is in this way that Core Skills primarily differ from Vocational Skills, as Vocational Skills cover tasks related to very specific or learned jobs.
+\textbf{Vocational Skills} primarily differ from \textbf{Core Skills} in that they cover tasks related to very specific and specialised jobs.
 
-Combat will be introduced fully in Chapter 4, but it is worth noting that Core Skills cannot be added to combat rolls. The only way Core Skills can aid combat rolls is through assists (see \textbf{Assists}, \autoref{ch:hp_assists}) Your combat skills will be covered in \textbf{Vocations}, \autoref{ch:cc_vocations}.
+Combat will be introduced fully in \autoref{part:combat}, but it is worth noting that \textbf{Core Skills} cannot be added to combat rolls. The only way \textbf{Core Skills} can aid combat rolls is through assists (see \textbf{Assists}, \autoref{ch:hp_assists}) Your combat skills will be covered in \textbf{Vocations}, \autoref{ch:cc_vocations}.
 
 \subsection{Strength-Based Skills} \label{subsec:strength_based_skills}
 
-\textbf{Endurance}
+\subsubsection{Endurance} \label{subsubsec:endurance}
 
-Endurance is the physical trait that represents your body’s ability to process toxins and resist disease. Resisting food poisoning, hot and cold weather and pushing on past exhaustion are all domains of endurance. Endurance also makes wearing and fighting in heavy armour easier, which will be covered further in (\textbf{Armour}, \autoref{}) %ref to armour chapter
+Endurance is the physical trait that represents your body’s ability to process toxins and resist disease. Resisting food poisoning, hot and cold weather and pushing on past exhaustion are all domains of endurance. Endurance also makes wearing and fighting in heavy armour easier, which will be covered further in (\textbf{Armour}, \autoref{ch:co_armour}) %ref to armour chapter
 
 \begin{displayquote}
     \textbf{Examples:}
@@ -54,7 +58,7 @@ Endurance is the physical trait that represents your body’s ability to process
     \end{itemize}
 \end{displayquote}
 
-\textbf{Athletics}
+\subsubsection{Athletics} \label{subsubsec:athletics}
 
 Athletics covers physical activity largely related to raw speed and strength. Long jump, high jump, sprinting and weightlifting are all covered by Athletics.
 
@@ -67,7 +71,7 @@ Athletics covers physical activity largely related to raw speed and strength. Lo
     \end{itemize}
 \end{displayquote}
 
-\textbf{Grip}
+\subsubsection{Grip} \label{subsubsec:grip}
 
 Grip encompasses hand strength and your ability to hold on to things. Climbing, holding, squeezing, and crushing are all covered by Grip. Grip can also be used by animals and monsters in several ways, an alligator death roll or a T-Rex crushing a fence with its jaw would all fall under Grip.
 
@@ -80,7 +84,7 @@ Grip encompasses hand strength and your ability to hold on to things. Climbing, 
     \end{itemize}
 \end{displayquote}
 
-\textbf{Swim}
+\subsubsection{Swim} \label{subsubsec:swim}
 
 Swim covers all situations where characters are attempting to move in liquids. It is also applicable to science fiction settings in Zero gravity environments. Swimming may be more difficult if a character is wearing heavy clothing or resisting conflicts at the same time, at the narrator's discretion. While the skill is quite linear in function, the cost of failure in these situations is more often than not fatal. Uniquely amongst the skills, failing a swim check differs depending on whether you have assigned skill points to it. If you have, narrative failure applies as normal, with your character making no headway, treading water or otherwise. However, if you have not been assigned any points to swim, your character slips underwater and begins drowning.
 
@@ -93,7 +97,7 @@ Swim covers all situations where characters are attempting to move in liquids. I
     \end{itemize}
 \end{displayquote}
 
-\textbf{Throw}
+\subsubsection{Throw} \label{subsubsec:throw}
 
 Throw covers the physical task of launching objects from yourself, and successfully receiving them. The ancient arts of shotput and discus are the domain of the Throw skill.
 
@@ -108,7 +112,7 @@ Throw covers the physical task of launching objects from yourself, and successfu
 
 \subsection{Reflex-Based Skills} \label{subsec:reflex-based_skills}
 
-\textbf{Perception}
+\subsubsection{Perception} \label{subsubsec:perception}
 
 Perception is the art of detecting things through sight, sound, and or scent, it can even cover “gut feelings” or intuition. It is used as the defence against deception, persuasion, and stealth; it will be common for the Narrator to require players to make environmental “Perception Checks” to gauge how much the characters notice regarding current happenings or places, whether obvious or subtle. While intellect can be vital in perception, it is the speed at which one notices things that can turn the tide in one’s favour. It is important to note many types of skills may commonly be used to assist with perception, especially vocational ones.
 
@@ -121,7 +125,7 @@ Perception is the art of detecting things through sight, sound, and or scent, it
     \end{itemize}
 \end{displayquote}
 
-\textbf{Acrobatics}
+\subsubsection{Acrobatics} \label{subsubsec:acrobatics}
 
 Acrobatics covers movements requiring agility and finesse as well as balance. Parkour, backflips and walking tightropes are all the domain of Acrobatics. Acrobatics is also the skill used for dodging things and avoiding traps or pitfalls.
 
@@ -134,7 +138,7 @@ Acrobatics covers movements requiring agility and finesse as well as balance. Pa
     \end{itemize}
 \end{displayquote}
 
-\textbf{Ride/Pilot}
+\subsubsection{Ride/Pilot} \label{subsubsec:ride_pilot}
 
 Any time a creature wishes to take passage on something the Ride/Pilot skill can be used. Riding a horse, driving a car/cart or surfing a wave would all be considered Ride/Pilot checks. When the ride skill is chosen the player must choose what type of animal or craft it applies to. The check should only need to be made if an active effort is required to maintain control. A person riding a train would not need to make a Ride/Pilot check, but the driver would. Clinging to a giant as it walks would be a grip check unless you were in control and directing its movement.
 
@@ -147,7 +151,7 @@ Any time a creature wishes to take passage on something the Ride/Pilot skill can
     \end{itemize}
 \end{displayquote}
 
-\textbf{Sleight of Hand}
+\subsubsection{Sleight of Hand} \label{subsubsec:sleight_of_hand}
 
 Activities that require highly dexterous control of the hands are covered by Sleight of Hand. While more obvious tasks such as picking pockets come to mind, the skill also covers things such as weaving a small basket or threading a needle.
 
@@ -160,7 +164,7 @@ Activities that require highly dexterous control of the hands are covered by Sle
     \end{itemize}
 \end{displayquote}
 
-\textbf{Stealth}
+\subsubsection{Stealth} \label{subsubsec:stealth}
 
 Sneaking, hiding from others and moving with no noise forms the basis of the Stealth skill. Stealth can be used for setting up ambushes and laying traps. Stealth is often countered by Perception, and the two forces of hide and seek clash constantly.
 
@@ -175,7 +179,7 @@ Sneaking, hiding from others and moving with no noise forms the basis of the Ste
 
 \subsection{Intelligence-Based Skills} \label{subsec:intelligence-based_skills}
 
-\textbf{General Knowledge}
+\subsubsection{General Knowledge} \label{subsubsec:general_knowledge}
 
 General Knowledge is the art of listening to rumours, recalling information and applying it where it is needed most. It aids in many tasks while being very specifically only usable on non-specialized tasks. A general knowledge check could never allow you to know how to disarm a bomb, but it might be able to tell you that to disarm a bomb you need to cut a specific wire. Which wire? You have no idea, perhaps if you had a Vocational Skill related to explosives you might know more.
 
@@ -188,7 +192,7 @@ General Knowledge is the art of listening to rumours, recalling information and 
     \end{itemize}
 \end{displayquote}
 
-\textbf{Deception}
+\subsubsection{Deception} \label{subsubsec:deception}
 
 Deception is used to mislead others. This can be done in a variety of ways, from complicated disguises to outright lying. Deception also covers forgery and wilfully sending the wrong impressions through body language. An important thing to note regarding deception is that the knowledge of the person you are trying to deceive/persuade should affect the CL of the roll. Even with this caveat, some things are simply impossible to lie about. You could not convince someone you were their wife or husband for example. Instead, succeeding even against impossible odds often leads to the listener believing that YOU believe what you are saying, which can lead to some very unexpected outcomes!
 
@@ -201,7 +205,7 @@ Deception is used to mislead others. This can be done in a variety of ways, from
     \end{itemize}
 \end{displayquote}
 
-\textbf{Infiltration}
+\subsubsection{Infiltration} \label{subsubsec:infiltration}
 
 If stealth is the art of going unseen, Infiltration is the art of going unnoticed. Hiding in plain sight or making the right social connections to ease into a niche social circle are equally valid uses of Infiltration. Infiltration also covers the ability to know and track patrol routes and weak points in defences.
 
@@ -214,7 +218,7 @@ If stealth is the art of going unseen, Infiltration is the art of going unnotice
     \end{itemize}
 \end{displayquote}
 
-\textbf{Persuasion}
+\subsubsection{Persuasion} \label{subsubsec:persuasion}
 
 Persuasion is the art of convincing people of your point of view. Persuasion can be used in innumerable ways, but bartering, charming people and making sound arguments are the primary focus of the skill.
 
@@ -227,7 +231,7 @@ Persuasion is the art of convincing people of your point of view. Persuasion can
     \end{itemize}
 \end{displayquote}
 
-\textbf{Survival}
+\subsubsection{Survival} \label{subsubsec:survival}
 
 Survival is the skill associated with staying alive in all environments. It covers scavenging for food, basic first aid as well as finding safe places to rest and lighting fires. In the city, survival keeps you from going too close to dangerous gang territory, it lets you know who to avoid, and where to avoid. In the wilderness, it tells you which berries will make you sick, which meat is spoiled and more.
 
