Converted combat part.

--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage{xltabular}
 \usepackage{csquotes}
 \usepackage{hyperref}
+\usepackage{enumitem}
 
 \begin{document}
 \renewcommand{\chapterautorefname}{Ch.}
@@ -84,6 +85,39 @@
 \chapter{Player-Narrator Negotiations} \label{ch:hp_player_narrator_negotiations}
 \input{sections/how_to_play/player_narrator_negotiations.tex}
 
+\part{Combat} \label{part:combat}
+
+\newpage
+\chapter{Combat Fundamentals} \label{ch:cb_combat_fundamentals}
+\input{sections/combat/combat_fundamentals.tex}
+
+\newpage
+\chapter{Combat Actions and Timing} \label{ch:cb_actions_timing}
+\input{sections/combat/combat_actions_timing.tex}
+
+\newpage
+\chapter{Armour} \label{ch:cb_armour}
+\input{sections/combat/armour.tex}
+
+\newpage
+\chapter{Weapon Modifiers} \label{ch:cb_weapon_modifiers}
+\input{sections/combat/weapon_modifiers.tex}
+
+\newpage
+\chapter{Fighting Groups} \label{ch:cb_fighting_groups}
+\input{sections/combat/fighting_groups.tex}
+
+\newpage
+\chapter{Melee vs Ranged} \label{ch:cb_melee_vs_ranged}
+\input{sections/combat/melee_vs_ranged.tex}
+
+\newpage
+\chapter{Combat Modifiers} \label{ch:cb_combat_modifiers}
+\input{sections/combat/combat_modifiers.tex}
+
+\newpage
+\chapter{Chases} \label{ch:cb_chases}
+\input{sections/combat/chases.tex}
 % =======================================================================================
 %                                   APPENDICES
 % =======================================================================================
