Updated how-to to reflect new chapter syntax, and fixed references in core_skills.tex. Removed unnecessary empty lines in conflicts_reflexive_actions.tex.

--- a/sections/character_creation/core_skills.tex
+++ b/sections/character_creation/core_skills.tex
@@ -37,13 +37,13 @@ Core skills in Cogent Roleplay are meant to represent the scope of activities th
 
 It is in this way that Core Skills primarily differ from Vocational Skills, as Vocational Skills cover tasks related to very specific or learned jobs.
 
-Combat will be introduced fully in Chapter 4, but it is worth noting that Core Skills cannot be added to combat rolls. The only way Core Skills can aid combat rolls is through assists (see \textbf{Assists}, \autoref{ch:hp_assists}) Your combat skills will be covered in \textbf{Vocations}, \autoref{ch:cc_vocations}.
+Combat will be introduced fully in Chapter 4, but it is worth noting that Core Skills cannot be added to combat rolls. The only way Core Skills can aid combat rolls is through assists (see \textbf{Assists}, \autoref{ch:hp.assists}) Your combat skills will be covered in \textbf{Vocations}, \autoref{ch:cc.vocations}.
 
 \subsection{Strength-Based Skills} \label{subsec:strength_based_skills}
 
 \textbf{Endurance}
 
-Endurance is the physical trait that represents your body’s ability to process toxins and resist disease. Resisting food poisoning, hot and cold weather and pushing on past exhaustion are all domains of endurance. Endurance also makes wearing and fighting in heavy armour easier, which will be covered further in (\textbf{Armour}, \autoref{}) %ref to armour chapter
+Endurance is the physical trait that represents your body’s ability to process toxins and resist disease. Resisting food poisoning, hot and cold weather and pushing on past exhaustion are all domains of endurance. Endurance also makes wearing and fighting in heavy armour easier, which will be covered further in (\textbf{Armour}, \autoref{ch:cb.armour}) %ref to armour chapter
 
 \begin{displayquote}
     \textbf{Examples:}
