Converted Narration part to Latex. Also changed chapter label syntax in main.tex.

--- a/main.tex
+++ b/main.tex
@@ -18,106 +18,136 @@
 \part{Introduction} \label{part:introduction}
 
 \newpage
-\chapter{Welcome to Cogent Roleplay} \label{ch:in_welcome}
+\chapter{Welcome to Cogent Roleplay} \label{ch:in.welcome}
 \input{sections/introduction/welcome}
 
 \newpage
-\chapter{An Introduction to Roleplaying} \label{ch:in_roleplay}
+\chapter{An Introduction to Roleplaying} \label{ch:in.roleplay}
 \input{sections/introduction/roleplay}
 
 \newpage
-\chapter{A quick overview of Cogent}\label{ch:in_overview}
+\chapter{A quick overview of Cogent}\label{ch:in.overview}
 \input{sections/introduction/overview}
 
 \part{Character Creation} \label{part:character_creation}
 
 \newpage
-\chapter{Identity} \label{ch:cc_identity}
+\chapter{Identity} \label{ch:cc.identity}
 \input{sections/character_creation/identity}
 
 \newpage
-\chapter{Attributes} \label{ch:cc_attributes}
+\chapter{Attributes} \label{ch:cc.attributes}
 \input{sections/character_creation/attributes}
 
 \newpage
-\chapter{Core Skills} \label{ch:cc_core_skills}
+\chapter{Core Skills} \label{ch:cc.core_skills}
 \input{sections/character_creation/core_skills.tex}
 
 \newpage
-\chapter{Vocations} \label{ch:cc_vocations}
+\chapter{Vocations} \label{ch:cc.vocations}
 \input{sections/character_creation/vocations.tex}
 
 \newpage
-\chapter{Disabling Characteristics} \label{ch:cc_disabling_characteristics}
+\chapter{Disabling Characteristics} \label{ch:cc.disabling_characteristics}
 \input{sections/character_creation/disabling_characteristics.tex}
 
 \newpage
-\chapter{Destiny Points} \label{ch:cc_destiny_points}
+\chapter{Destiny Points} \label{ch:cc.destiny_points}
 \input{sections/character_creation/destiny_points.tex}
 
 \newpage
-\chapter{Commerce Points} \label{ch:cc_commerce_points}
+\chapter{Commerce Points} \label{ch:cc.commerce_points}
 \input{sections/character_creation/commerce_points.tex}
 
 \part{How to Play} \label{part:how_to_play}
 
 \newpage
-\chapter{Dice Pools} \label{ch:hp_dice_pools}
+\chapter{Dice Pools} \label{ch:hp.dice_pools}
 \input{sections/how_to_play/dice_pools.tex}
 
 \newpage
-\chapter{Actions and Challenge Levels} \label{ch:hp_challenge_levels}
+\chapter{Actions and Challenge Levels} \label{ch:hp.challenge_levels}
 \input{sections/how_to_play/challenge_levels.tex}
 
 \newpage
-\chapter{Conflicts and Reflexive Actions} \label{ch:hp_conflicts_reflexive_actions}
+\chapter{Conflicts and Reflexive Actions} \label{ch:hp.conflicts_reflexive_actions}
 \input{sections/how_to_play/conflicts_reflexive_actions.tex}
 
 \newpage
-\chapter{Success and Failure} \label{ch:hp_success_and_failure}
+\chapter{Success and Failure} \label{ch:hp.success_and_failure}
 \input{sections/how_to_play/success_and_failure.tex}
 
 \newpage
-\chapter{Assists} \label{ch:hp_assists}
+\chapter{Assists} \label{ch:hp.assists}
 \input{sections/how_to_play/assists.tex}
 
 \newpage
-\chapter{Player-Narrator Negotiations} \label{ch:hp_player_narrator_negotiations}
+\chapter{Player-Narrator Negotiations} \label{ch:hp.player_narrator_negotiations}
 \input{sections/how_to_play/player_narrator_negotiations.tex}
 
 \part{Combat} \label{part:combat}
 
 \newpage
-\chapter{Combat Fundamentals} \label{ch:cb_combat_fundamentals}
+\chapter{Combat Fundamentals} \label{ch:cb.combat_fundamentals}
 \input{sections/combat/combat_fundamentals.tex}
 
 \newpage
-\chapter{Combat Actions and Timing} \label{ch:cb_actions_timing}
+\chapter{Combat Actions and Timing} \label{ch:cb.actions_timing}
 \input{sections/combat/combat_actions_timing.tex}
 
 \newpage
-\chapter{Armour} \label{ch:cb_armour}
+\chapter{Armour} \label{ch:cb.armour}
 \input{sections/combat/armour.tex}
 
 \newpage
-\chapter{Weapon Modifiers} \label{ch:cb_weapon_modifiers}
+\chapter{Weapon Modifiers} \label{ch:cb.weapon_modifiers}
 \input{sections/combat/weapon_modifiers.tex}
 
 \newpage
-\chapter{Fighting Groups} \label{ch:cb_fighting_groups}
+\chapter{Fighting Groups} \label{ch:cb.fighting_groups}
 \input{sections/combat/fighting_groups.tex}
 
 \newpage
-\chapter{Melee vs Ranged} \label{ch:cb_melee_vs_ranged}
+\chapter{Melee vs Ranged} \label{ch:cb.melee_vs_ranged}
 \input{sections/combat/melee_vs_ranged.tex}
 
 \newpage
-\chapter{Combat Modifiers} \label{ch:cb_combat_modifiers}
+\chapter{Combat Modifiers} \label{ch:cb.combat_modifiers}
 \input{sections/combat/combat_modifiers.tex}
 
 \newpage
-\chapter{Chases} \label{ch:cb_chases}
+\chapter{Chases} \label{ch:cb.chases}
 \input{sections/combat/chases.tex}
+
+\part{Narration} \label{part:narration}
+
+\newpage
+\chapter{Fundamentals of Narration} \label{ch:na.fundamentals}
+\input{sections/narration/fundamentals.tex}
+
+\newpage
+\chapter{The Destiny Roll} \label{ch:na.the_destiny_roll}
+\input{sections/narration/destiny_roll.tex}
+
+\newpage
+\chapter{Running Games} \label{ch:na.running_games}
+\input{sections/narration/running_games.tex}
+
+\newpage
+\chapter{Campaign Progression} \label{ch:na.campaign_progression}
+\input{sections/narration/campaign_progression.tex}
+
+\newpage
+\chapter{Narrator Tips} \label{ch:na.narrator_tips}
+\input{sections/narration/narrator_tips.tex}
+
+\newpage
+\chapter{Custom Rules and Magic} \label{ch:na.custom_rules_and_magic}
+\input{sections/narration/custom_rules_and_magic.tex}
+
+\newpage
+\chapter{NPCs and Monsters} \label{ch:na.nps_and_monsters}
+\input{sections/narration/npcs_and_monsters.tex}
 % =======================================================================================
 %                                   APPENDICES
 % =======================================================================================
