Updated cover page to better show authors.

--- a/context.tex
+++ b/context.tex
@@ -2,8 +2,8 @@
 %								VARIABLES
 % =============================================================================
 
-\newcommand{\AUTHOR}{Jazza and Shad Brooks, The Community}
-\newcommand{\CLIENT}{}
+\newcommand{\AUTHOR}{Jazza \& Shad Brooks}
+\newcommand{\AUTHORTWO}{+ The Community}
 \newcommand{\DATE}{\today}
 \newcommand{\VERSION}{v1.3.1}
 \newcommand{\TITLE}{Cogent Roleplay}
