--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \begin{document}
 \renewcommand{\chapterautorefname}{Ch.}
 
-\coverpage{\TITLE}{\SUBTITLE}{\AUTHOR}{\DATE}{\SUBJECT}
+\coverpage{\TITLE}{\SUBTITLE}{\AUTHOR}{\AUTHORTWO}{\DATE}{\SUBJECT}
 
 \newpage
 \tableofcontents
