Converted to two page layout, for better booklet printing.

--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \newpage
 \tableofcontents
 
+\cleardoublepage
 \part{Introduction} \label{part:introduction}
 
 \newpage
@@ -29,6 +30,7 @@
 \chapter{A quick overview of Cogent}\label{ch:in.overview}
 \input{sections/introduction/overview}
 
+\cleardoublepage
 \part{Character Creation} \label{part:character_creation}
 
 \newpage
@@ -59,6 +61,7 @@
 \chapter{Commerce Points} \label{ch:cc.commerce_points}
 \input{sections/character_creation/commerce_points.tex}
 
+\cleardoublepage
 \part{How to Play} \label{part:how_to_play}
 
 \newpage
@@ -85,6 +88,7 @@
 \chapter{Player-Narrator Negotiations} \label{ch:hp.player_narrator_negotiations}
 \input{sections/how_to_play/player_narrator_negotiations.tex}
 
+\cleardoublepage
 \part{Combat} \label{part:combat}
 
 \newpage
@@ -119,6 +123,7 @@
 \chapter{Chases} \label{ch:cb.chases}
 \input{sections/combat/chases.tex}
 
+\cleardoublepage
 \part{Narration} \label{part:narration}
 
 \newpage
