--- a/template/book/page.tex
+++ b/template/book/page.tex
@@ -2,10 +2,12 @@
 %   GEOMETRY
 %----------------------------------------------------------------------------------------
 
-\usepackage[top=2cm,bottom=2cm,left=4cm,right=2cm,headsep=10pt,a4paper]{geometry} % margins
+\usepackage[top=2cm,bottom=2cm,left=4cm,right=3.5cm,headsep=10pt,a4paper, asymmetric, bindingoffset=-1.5cm]{geometry} % margins
 
 %----------------------------------------------------------------------------------------
 %   LANDSCAPE
 %----------------------------------------------------------------------------------------
 
 \usepackage{pdflscape}
+
+%for a odd margin of x with even left margin LEFT and even right margin RIGHT, left = LEFT, right = RIGHT - binding, binding = x - LEFT.
