--- a/light.tex
+++ b/light.tex
@@ -1,7 +1,7 @@
 % This work is licensed under the GNU aGPL v3 by apehex
 % https://github.com/apehex/
 
-\documentclass[11pt,fleqn,oneside]{book} % Default font size and left-justified equations
+\documentclass[11pt,fleqn,twoside,openany]{book} % Default font size and left-justified equations
 
 % =======================================================================================
 \input{context} % Global settings
