--- a/template/book/titles.tex
+++ b/template/book/titles.tex
@@ -13,7 +13,7 @@
 %   LAYOUT
 %----------------------------------------------------------------------------------------
 
-\titlespacing*{\part}{-3cm}{9cm}{20pt}
+\titlespacing*{\part}{0cm}{9cm}{20pt}
 
 %----------------------------------------------------------------------------------------
 %   FORMAT
@@ -23,7 +23,8 @@
   {}
   {}
   {0pt}
-  {\begin{tikzpicture}[overlay]
+  {
+    \begin{tikzpicture}[overlay]
     % horizontal bg strip behind title
     \node[anchor=north west, inner sep=0mm, outer sep=0pt, minimum height=48mm, minimum width=\paperwidth, xshift=0cm, yshift=2.8cm, fill=bg] {\parbox{\paperwidth}{}};
     % introduction block below title
