Converted Supplementary Content part.

--- a/main.tex
+++ b/main.tex
@@ -153,6 +153,25 @@
 \newpage
 \chapter{NPCs and Monsters} \label{ch:na.nps_and_monsters}
 \input{sections/narration/npcs_and_monsters.tex}
+
+\cleardoublepage
+\part{Supplementary Content} \label{part:supplementary}
+
+\newpage
+\chapter{Expanding the Core Rules} \label{ch:su.expanding_core_rules}
+\input{sections/supplementary/expanding_core_rules.tex}
+
+\newpage
+\chapter{Metahuman Powers in Cogent} \label{ch:su.metahuman_powers}
+\input{sections/supplementary/metahuman_powers.tex}
+
+\newpage
+\chapter{Example Magic System: Classical Medieval Fantasy} \label{ch:su.classic_fantasy_system}
+\input{sections/supplementary/classic_fantasy_system.tex}
+
+\newpage
+\chapter{Random Encounter Tables: Classical Medieval Fantasy} \label{ch:su.random_encounter_tables}
+\input{sections/supplementary/random_encounter_tables.tex}
 % =======================================================================================
 %                                   APPENDICES
 % =======================================================================================
