Converted "hardcore combat" and "feedback and support" parts. Finished conversion of original markdown!

--- a/main.tex
+++ b/main.tex
@@ -172,6 +172,33 @@
 \newpage
 \chapter{Random Encounter Tables: Classical Medieval Fantasy} \label{ch:su.random_encounter_tables}
 \input{sections/supplementary/random_encounter_tables.tex}
+
+\cleardoublepage
+\part{Hardcore Combat} \label{part:hardcore_combat}
+
+\newpage
+\chapter{Introducing Hardcore Combat [Optional]} \label{ch:hc.hardcore_combat}
+\input{sections/hardcore_combat/hardcore_combat.tex}
+
+\newpage
+\chapter{Hardcore Armour} \label{ch:hc.hardcore_armour}
+\input{sections/hardcore_combat/hardcore_armour.tex}
+
+\newpage
+\chapter{Hardcore Weapon Modifiers} \label{ch:hc.hardcore_weapon}
+\input{sections/hardcore_combat/hardcore_weapon.tex}
+
+\newpage
+\chapter{Hardcore Ranged Weapons} \label{ch:hc.hardcore_ranged}
+\input{sections/hardcore_combat/hardcore_ranged.tex}
+
+\cleardoublepage
+\part{Feedback \& \newline Support} \label{part:feedback_support}
+
+\newpage
+\chapter{Afterword} \label{ch:fs.afterword}
+\input{sections/feedback_support/afterword.tex}
+
 % =======================================================================================
 %                                   APPENDICES
 % =======================================================================================
